# infer-takehome

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ASSIGNMENT.md  Dockerfile  README.md  caddy.conf  claudepad.md  deploy.sh  docker-compose.prod.yml  pyproject.toml
backend/: auto_repair.py  auto_repair_patches.py  config.py  email_notifier.py  env_flags.py  feedback_recovery.py  identity.py  logging_config.py  main.py  models.py  orchestrator.py  pdf_analyzer.py  playwright_runner.py  repair_browser.py  repair_deliver.py  repair_prompt.md  result_store.py  session_manager.py  slot_manager.py  storage.py  worker_proxy.py
backend/carriers/: base.py  geico.py  generic_portal.py  mock.py  registry.py  usaa.py
frontend/: app.js  index.html  style.css
scripts/: claude-remote  inspect_geico.py  inspect_usaa.py  inspect_usaa_after_login.py  inspect_usaa_authed.py  inspect_usaa_cdp.py  inspect_usaa_chrome.py  inspect_usaa_mfa_options.py  inspect_usaa_password.py  manual_portal_probe.py  repair_probe.py  run_usaa_once.py  verify_geico_form.py
tests/: conftest.py  test_auto_repair.py  test_content_disposition.py  test_email_notifier.py  test_env_flags.py  test_feedback_recovery.py  test_geico_smoke.py  test_generic_portal_unit.py  test_identity.py  test_integration.py  test_orchestrator_unit.py  test_pdf_analyzer.py  test_playwright_runner_unit.py  test_repair_deliver.py  test_result_store.py  test_session_manager.py  test_slot_manager.py  test_sse_termination.py  test_storage.py  test_usaa_smoke.py  test_usaa_unit.py  test_worker_proxy.py
(+1 files in other folders)
