[project]
name = "infer-takehome"
version = "0.1.0"
description = "Carrier portal document puller (Infer take-home)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "playwright>=1.48",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
# Pins the lint baseline so `uv run ruff check` is reproducible across ruff
# releases. Keeps ruff's default rule set (pyflakes F + pycodestyle E4/E7/E9).

[tool.uv]
package = false
